<resources>
    <string name="app_name">BookMeNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_booking">Book Appointment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_time">Time Slots</string>
    <string name="txt_date">Date</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="menu_show_appointment">Show Appointments</string>
    <string name="txt_enter_details">Enter Details</string>
    <string name="txt_confirm">Confirm</string>
    <string name="menu_profile">Profile</string>
</resources>