<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_booking">

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.project.bookmenow.ui.book_appointment.BookAppointmentFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_book_appointment" />

    <fragment
        android:id="@+id/nav_show_appointment"
        android:name="com.project.bookmenow.ui.gallery.ShowAppointmentsFragment"
        android:label="@string/menu_show_appointment"
        tools:layout="@layout/fragment_show_appointments" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.bookmenow.ui.slideshow.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>