<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    app:cardCornerRadius="@dimen/_5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5dp">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextText3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_email"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextText2"
                app:layout_constraintEnd_toEndOf="@+id/editTextText"
                app:layout_constraintStart_toStartOf="@+id/editTextText"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:minHeight="48dp"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
                app:layout_constraintEnd_toEndOf="@+id/editTextText3"
                app:layout_constraintStart_toStartOf="@+id/editTextText3"
                app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_submit"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editTextText2"
                app:layout_constraintStart_toStartOf="@+id/editTextText2"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

