<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.book_appointment.BookAppointmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_screen_padding">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_date"
            android:textColor="@color/color_home_screen_heading"
            android:textSize="@dimen/txt_home_screen_heading"
            app:layout_constraintBottom_toTopOf="@+id/calendarView"
            app:layout_constraintEnd_toEndOf="@+id/calendarView"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerColor="@color/green"
            app:type="one_day_picker"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_time"
            android:textColor="@color/color_home_screen_heading"
            android:textSize="@dimen/txt_home_screen_heading"
            app:layout_constraintBottom_toTopOf="@+id/gridLayoutTimeSlots"
            app:layout_constraintEnd_toEndOf="@+id/gridLayoutTimeSlots"
            app:layout_constraintStart_toStartOf="@+id/gridLayoutTimeSlots"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <GridView
            android:id="@+id/gridLayoutTimeSlots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="5dp"
            android:numColumns="4"
            android:verticalSpacing="5dp"
            app:layout_constraintBottom_toTopOf="@+id/calendarView"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="12dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gridLayoutTimeSlots"
            app:layout_constraintTop_toBottomOf="@+id/gridLayoutTimeSlots" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>